tests/PhiTest/compile_failure/src/StaticRequireFalse.fail.cpp
#include <phi/test/test_macros.hpp>

TEST_CASE("STATIC_REQUIRE_FALSE")
{
    STATIC_REQUIRE_FALSE(true);
}
